Prepare for initial Heroku push

--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --watch --mode=development"
+    "postinstall": "webpack"
+  },
+  "engines": {
+    "node": "8.4.0",
+    "npm": "6.1.0"
   },
   "repository": {
     "type": "git",
